<resources>
    <string name="app_name">My Application</string>
    <string name="helloText">Welcome back</string>
    <string name="sign_in_label">sign in</string>
    <string name="passwordHint">Password</string>
    <string name="emailHint">Email</string>
    <string name="imageDescription">StarIcon</string>
    <string name="buttonIconDescription">arrowIcon</string>
    <string name="tvText1">Введите пароль и email</string>
    <string name="tvText2Correct">Верно</string>
    <string name="tvText3Incorrect">Вы ошиблись в логине или пароле</string>
</resources>