<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.3" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.5" />

    <View
        android:id="@+id/view2"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:background="@color/peach"
        app:layout_constraintBottom_toTopOf="@+id/guideline3"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0" />

    <View
        android:id="@+id/view3"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:background="@color/purple_custom"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/guideline3" />

    <View
        android:id="@+id/view4"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:background="@drawable/ic_left_rounded_shape"
        android:visibility="visible"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/guideline2" />

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:layout_marginStart="30dp"
        android:layout_marginTop="40dp"
        android:contentDescription="@string/imageDescription"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/ic_star" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="214dp"
        android:layout_height="93dp"
        android:layout_marginStart="100dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="95dp"
        android:fontFamily="@font/rubik_mono_one"
        android:text="@string/helloText"
        android:textAllCaps="true"
        android:textColor="@color/black"
        android:textSize="34sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/guideline2" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/emailInputLayout"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="30dp"
        android:layout_marginTop="52dp"
        android:layout_marginEnd="30dp"
        android:textColorHint="@color/textInputHintColor"
        android:visibility="visible"
        app:boxBackgroundColor="@color/white"
        app:boxStrokeColor="@color/textInputHintColor"
        app:hintTextColor="@color/textInputHintColor"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView"
        app:startIconDrawable="@drawable/ic_baseline_email_24"
        app:startIconTint="@color/textInputHintColor">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/et_Email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/emailHint"
            android:inputType="textEmailAddress"
            android:textColor="@color/textInputHintColor"
            android:visibility="visible"
            tools:ignore="TextContrastCheck" />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/passwordInputLayout"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:textColorHint="@color/textInputHintColor"
        android:visibility="visible"
        app:boxBackgroundColor="@color/white"
        app:boxStrokeColor="@color/textInputHintColor"
        app:endIconMode="password_toggle"
        app:endIconTint="@color/textInputHintColor"
        app:hintTextColor="@color/textInputHintColor"
        app:layout_constraintEnd_toEndOf="@+id/emailInputLayout"
        app:layout_constraintStart_toStartOf="@+id/emailInputLayout"
        app:layout_constraintTop_toBottomOf="@+id/emailInputLayout"
        app:startIconDrawable="@drawable/ic_baseline_security_24"
        app:startIconTint="@color/textInputHintColor">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/et_Password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/passwordHint"
            android:inputType="textPassword"
            android:textColor="@color/textInputHintColor"
            android:visibility="visible" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btnSignin"
        style="@style/Widget.MaterialComponents.Button.TextButton"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="26dp"
        android:fontFamily="@font/rubik_mono_one"
        android:gravity="start|center_vertical"
        android:text="@string/sign_in_label"
        android:textColor="@color/black"
        android:textSize="20sp"
        app:icon="@drawable/ic_arrow_icon"
        app:iconGravity="end"
        app:iconSize="70dp"
        app:iconTint="@color/white"
        app:iconTintMode="multiply"
        android:padding="0dp"
        app:rippleColor="@color/peach_transparent"
        app:layout_constraintEnd_toEndOf="@+id/passwordInputLayout"
        app:layout_constraintStart_toStartOf="@+id/passwordInputLayout"
        app:layout_constraintTop_toBottomOf="@+id/passwordInputLayout" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="23dp"
        android:fontFamily="@font/rubik_mono_one"
        android:gravity="center"
        android:text="@string/tvText1"
        android:textColor="@color/black"
        android:textSize="12sp"
        app:layout_constraintEnd_toEndOf="@+id/btnSignin"
        app:layout_constraintStart_toStartOf="@+id/btnSignin"
        app:layout_constraintTop_toBottomOf="@+id/btnSignin" />

</androidx.constraintlayout.widget.ConstraintLayout>